# stock_tracker_celery

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
app/mainapp/: tasks.py  urls.py  views.py
app/mainapp/templates/mainapp/: basic.html  stockpicker.html  stocktracker.html
app/mainapp/templatetags/: custom_filter.py
app/stock_app/: celery.py  settings.py  urls.py
