[project]
name = "stock-tracker-celery"
version = "1.0.0"
description = "Stock tracker using Celery and Django"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "django>=5.1,<5.2",
    "yahoo-fin>=0.8.9.1,<0.9.0.0",
    "html5lib>=1.1,<2.0",
    "lxml>=5.3.2,<6.0.0",
    "requests>=2.32.3,<3.0.0",
    "yfinance>=0.2.55,<0.3.0",
    "celery[redis] (>=5.5.1,<6.0.0)",
    "redis>=5.2.1,<6.0.0",
    "django-celery-beat>=2.7.0,<3.0.0"
]

[project.optional-dependencies]
dev = []

[tool.poetry]
packages = [
    { include = "stock_tracker_celery" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
